@@ -1,3 +1,7 @@
+2005-06-05  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/smooth_refresh.c: (smooth_refresh_get): Less verbose debug message.
+
 2005-06-03  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/proctable.c: (remove_info_from_tree): Don't use a copy of info->node.
